<resources>
    <string name="app_name">Dyslexic eReader</string>
    <string name="upload_file_label">Upload a File</string>
    <string name="scan_a_book_label">Scan a Book</string>
    <string name="upload_file_description">Add your own documents</string>
    <string name="scan_book_description">Add from printed text</string>
    <string name="upload_file_icon">upload_file_icon</string>
    <string name="library_title">Library</string>
    <string name="title_activity_setting">Setting</string>
    <string name="settings">Settings</string>
    <string name="main_menu_title">Hello User</string>
    <string name="recommended">Recommended for you</string>
    <string name="currently_reading">Currently Reading</string>
    <string name="favourite_list">Favourtie List</string>
    <string name="your_books">Your books</string>
</resources>